# agentshield

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: ci.yml
action/: action.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: analyzers.test.ts  analyzers.ts  bulk-scan.ts  clawhub.ts  index.ts  output.test.ts  output.ts  scan-local.ts  scoring.ts  types.ts  yaml-parser.ts
crates/scanner-core/: Cargo.toml
crates/scanner-core/src/: frameworks.rs  ingester.rs  lib.rs  llm_analysis.rs  report.rs  scoring.rs  signatures_db.rs
crates/scanner-core/src/analyzers/: behavioral.rs  metadata.rs  mod.rs  pattern.rs  signatures.rs
crates/scanner-core/tests/: integration_test.rs
crates/web-api/: Cargo.toml  openapi.yaml
crates/web-api/src/: main.rs
signatures/: amos-stealer.yaml  clawhavoc.yaml  data-exfil.yaml  reverse-shells.yaml
tests/fixtures/clean/api-client-skill/: SKILL.md
tests/fixtures/clean/calculator-skill/: SKILL.md
tests/fixtures/clean/crewai-agent/: agent.yaml
tests/fixtures/clean/dify-node/: node.json
tests/fixtures/clean/ignore-directive-skill/: SKILL.md
tests/fixtures/clean/langchain-tool/: tool.py
tests/fixtures/clean/weather-skill/: SKILL.md
tests/fixtures/malicious/clawhavoc-sample/: SKILL.md
tests/fixtures/malicious/crewai-injection/: agent.yaml
tests/fixtures/malicious/data-exfil-sample/: SKILL.md
tests/fixtures/malicious/dify-exfil/: node.json
tests/fixtures/malicious/env-harvest-sample/: SKILL.md
web/static/: app.js  index.html  styles.css
(+6 files in other folders)
