[package]
name = "scanner-core"
version = "0.1.0"
edition = "2021"
description = "Core scanning engine for AgentShield — detects malicious patterns in OpenClaw SKILL.md files"
license = "MIT"

[[bin]]
name = "agentshield"
path = "src/bin/main.rs"

[dependencies]
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
glob = "0.3"
strsim = "0.11"

[dev-dependencies]
tempfile = "3"
