[package]
name = "agentshield-web"
version = "0.1.0"
edition = "2021"
description = "Web API server for AgentShield — scan skills via HTTP"
license = "MIT"

[[bin]]
name = "agentshield-web"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
