[package]
name = "agentshield-web"
version = "0.1.0"
edition = "2021"
description = "Web API server for AgentShield — scan skills via HTTP"
license = "MIT"

[[bin]]
name = "agentshield-web"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.6"
governor = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
actix-rt = "2"
actix-test = "0.1"
